--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 24 09:21:34 CET 2017
-sdk.dir=D\:\\Users\\Benjamin\\AppData\\Local\\Android\\sdk
+#Fri Mar 24 10:55:01 CET 2017
+ndk.dir=C\:\\Users\\yuks\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\yuks\\AppData\\Local\\Android\\Sdk
